--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>ipds_logo.ico">
+    <link rel="icon" href="<%= BASE_URL %>supercool.png">
     <title>智能配單停車系統</title>
   </head>
   <body>
